--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,10 @@ body,
   user-select: none;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial,
   sans-serif;
@@ -28,7 +32,7 @@ body {
 
 .item {
   position: relative;
-  width: 300px;
+  width: 500px;
   height: 100px;
   pointer-events: auto;
   transform-origin: 50% 50% 0px;
@@ -41,10 +45,10 @@ body {
   border-radius: 5px;
   box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.2);
   margin-bottom: 2em;
+  overflow: hidden;
 }
 
 .fg {
-  cursor: -webkit-grab;
   background-color: #272727;
   color: rgba(255, 255, 255, 0.8);
   position: absolute;
@@ -58,11 +62,16 @@ body {
   font-size: 3em;
   font-weight: 600;
   transition: box-shadow 0.75s;
-  padding: 0 .5em;
+  padding: .5em .25em;
+  justify-content: center;
 
-  &:active {
-    cursor: -webkit-grabbing;
-    box-shadow: 0px 15px 30px -5px rgba(0, 0, 0, 0.4);
+  &.spring {
+    cursor: -webkit-grab;
+
+    &:active {
+      cursor: -webkit-grabbing;
+      box-shadow: 0px 15px 30px -5px rgba(0, 0, 0, 0.4);
+    }
   }
 
   & > * {
@@ -72,6 +81,7 @@ body {
   & > a {
     color: whitesmoke;
     pointer-events: auto;
+    width: fit-content;
   }
 }
 
@@ -81,3 +91,15 @@ body {
   border-radius: 50%;
   background-color: white;
 }
+
+.logo-wrapper {
+  display: flex;
+  justify-content: space-around;
+  height: 100px;
+
+  #logo {
+    height: 100%;
+    display: block;
+  }
+}
+
